--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "manifest_version": 2,
   "description": "Swap comment and recommended video position in youtube",
+  "icons": {
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
+  },
   "content_scripts": [{
     "matches": ["*://*.youtube.com/*"],
     "js": ["content.js"],
